--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -1,6 +1,6 @@
 :root {
   --main-color: rgba(20, 48, 46, 1);
-  --second-color: rgba(111.19, 11, 1);
+  --second-color: rgba(111, 19, 11, 1);
   --third-color: rgba(66, 88, 75, 1);
   --fourth-color: rgba(183, 138, 97, 1);
   --fifth-color: rgba(226, 224, 209, 1);
@@ -23,4 +23,20 @@ body {
 
 a {
   color: var(--fifth-color) !important;
+}
+
+h1 {
+  margin-top: 42%;
+  font-size: 103px;
+  display: block;
+  line-height: 0.6;
+}
+
+h2 {
+  font-size: 60px;
+}
+
+p {
+  margin-top: 30px;
+  font-size: 23px;
 }
