--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -26,10 +26,11 @@ a {
 }
 
 h1 {
-  margin-top: 42%;
-  font-size: 103px;
+  color: var(--third-color);
+  margin-top: 78px;
+  font-size: 446px;
   display: block;
-  line-height: 0.6;
+  line-height: 0.7;
 }
 
 h2 {
@@ -39,4 +40,27 @@ h2 {
 p {
   margin-top: 30px;
   font-size: 23px;
+}
+
+.image-container {
+  background-image: url("img_nature.jpg");
+  background-size: cover;
+  position: relative;
+  height: 300px;
+}
+
+.second-heading {
+  background-color: white;
+  color: black;
+  font-size: 10vw;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px;
+  width: 50%;
+  text-align: center;
+  position: absolute;
+  top: 50%; /* Position text in the middle */
+  left: 50%; /* Position text in the middle */
+  transform: translate(-50%, -50%); /* Position text in the middle */
+  mix-blend-mode: screen; /* This makes the cutout text possible */
 }
