--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -59,8 +59,8 @@ p {
   width: 70%;
   text-align: center;
   position: absolute;
-  top: 50%; /* Position text in the middle */
-  left: 50%; /* Position text in the middle */
-  transform: translate(-50%, -50%); /* Position text in the middle */
-  mix-blend-mode: screen; /* This makes the cutout text possible */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: screen;
 }
