--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -64,3 +64,12 @@ p {
   transform: translate(-50%, -50%);
   mix-blend-mode: screen;
 }
+
+.primary-link {
+  background: var(--second-color);
+  color: var(--fourth-color);
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+}
