--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -42,6 +42,17 @@ p {
   font-size: 23px;
 }
 
+.app-name {
+  color: var(--third-color);
+}
+
+.between-text {
+  font-size: 66px;
+  text-align: center;
+  padding: 27px;
+  color: var(--main-color);
+}
+
 .image-container {
   background-image: url("img_nature.jpg");
   background-size: cover;
