--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -94,7 +94,7 @@ p {
 @media (max-width: 767px) {
   h1 {
     font-size: 130px;
-    text-align: right;
+    text-align: center;
   }
   body {
     line-height: 30px;
@@ -129,7 +129,7 @@ p {
 .aboutpage-firstheading {
   color: var(--third-color);
   margin-top: 148px;
-  font-size: 127px;
+  font-size: 95px;
   display: block;
   line-height: 0.8;
 }
