--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -27,7 +27,7 @@ a {
 
 h1 {
   color: var(--third-color);
-  margin-top: 107px;
+  margin: 107px;
   font-size: 446px;
   display: block;
   line-height: 0.7;
@@ -51,35 +51,6 @@ p {
   text-align: center;
   padding: 27px;
   color: var(--main-color);
-}
-
-.image-container {
-  background-image: url("img_nature.jpg");
-  background-size: cover;
-  position: relative;
-  height: 393px;
-}
-
-.second-heading {
-  background-color: white;
-  color: black;
-  font-size: 10vw;
-  font-weight: bold;
-  margin: 0 auto;
-  padding: 22px;
-  width: 70%;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  mix-blend-mode: screen;
-}
-
-@media (max-width: 1399px) {
-  .image-container {
-    display: none;
-  }
 }
 
 .primary-link {
