--- a/src/styleMax.css
+++ b/src/styleMax.css
@@ -10,6 +10,7 @@
 body {
   font-family: var(--main-text);
   background-color: var(--fifth-color);
+  margin: 5px;
 }
 
 .navbar {
@@ -25,9 +26,16 @@ a {
   color: var(--fifth-color) !important;
 }
 
-h1 {
+.homepage-heading {
   color: var(--third-color);
   margin: 107px;
+  font-size: 446px;
+  display: block;
+  line-height: 0.7;
+}
+
+h1 {
+  color: var(--third-color);
   font-size: 446px;
   display: block;
   line-height: 0.7;
@@ -72,7 +80,9 @@ p {
 @media (max-width: 1399px) {
   h1 {
     text-align: center;
+    font-size: 20vw;
   }
+
   body {
     line-height: 30px;
   }
@@ -91,12 +101,6 @@ p {
     display: none;
   }
   .col-4 {
-    display: none;
-  }
-}
-
-@media (min-width: 1400px) {
-  .smallwebpagetext {
     display: none;
   }
 }
